--- a/multivariate/multivariate.qmd
+++ b/multivariate/multivariate.qmd
@@ -67,7 +67,7 @@ However, we might wonder, or worry, about a number of issues. For example:
 * What were the outcomes like for this group of people *before* they participated in the *intervention*?
 * If the outcomes of the *intervention* were favorable, it might not be that the intervention is particularly better, but that people improve or get better *naturally* over time. 
 
-Therefore a more sophisticated research design would be to have one group of people--an *intervention group*--participate in the *intervention* or *program*, while another group--a comparison group--does not participate. We would then compare outcomes across the two groups.[^ethics]
+Therefore a more sophisticated research design would be to have one group of people--an *intervention group*--participate in the *intervention* or *program*, while another group--a *comparison* group--does not participate. We would then compare outcomes across the two groups.[^ethics]
 
 [^ethics]: Valid questions could be raised about the *ethics* of such an approach, specifically denying participation in the *program* to one group of people. If a program is of *unknown* benefit, it is *ethical* to evaluate this program with a comparison group approach, because it is *not yet known* whether the program confers benefit on its participants, and whether the program represents a valid use of time, energy and financial resources, or whether the program is a waste of resources, and of participant's time. Indeed, an evaluation might uncover the fact that the program has no beneficial effects, or even that the program is harmful! Once a program has been established as *beneficial*, it would likely be *unethical* to conduct an evaluation where the program is withheld from some participants. However, we could then consider a comparison of the program with an enhanced version of the program that might confer even more benefits.
 
