article in journal online!!!; updated citation

--- a/empathy/empathy.bib
+++ b/empathy/empathy.bib
@@ -1,6 +1,7 @@
 @article{empathy,
-   author = {Sunghyun Hong and Andrew Grogan-Kaylor and Moohyun Kim and Anna Bender and Shaddy Saba and Chi-Lin Yu and Lisa Fedina and Todd Herrenkohl},
-   journal = {Child Maltreatment},
-   title = {When Empathy Helps and Hurts: Non-Linear Associations Between Early Childhood Maltreatment History, Empathy and Self-Harm Thoughts},
-   year = {2026}
+author = {Sunghyun Hong and Andrew Grogan-Kaylor and Moohyun Kim and Anna E. Bender and Shaddy Saba and Chi-Lin Yu and Lisa Fedina and Todd I. Herrenkohl},
+title ={When Empathy Helps and Hurts: Non-Linear Associations Between Early Childhood Maltreatment History, Empathy and Self-Harm Thoughts},
+journal = {Child Maltreatment},
+year = {2026},
+doi = {10.1177/10775595261422448}
 }
