--- a/multivariate/multivariate.qmd
+++ b/multivariate/multivariate.qmd
@@ -32,6 +32,12 @@ library(sf) # simple (spatial) features
 
 # library(patchwork) # stitch ggplots together
 
+options(rgl.useNULL = TRUE)
+
+library(rgl) # 3D plots
+
+library(car) # Companion to Applied Regression
+
 ```
 
 ```{r}
@@ -175,7 +181,7 @@ flowchart TB
 
 ```
 
-# Are Those In the program Group And Comparison Group Similar?
+# Are Those In the Program Group And Comparison Group Similar?
 
 If participants from Group A and Group B are evenly distributed across the program and treatment groups, then we are not worried about the idea that an apparent effect of the program is because of unequal allocation of groups to the program.
 
@@ -258,6 +264,10 @@ subgraph study["study participants"]
 However, often the nature of the *program* is such that we want to allow *participants* in the study to *select their own level of participation*, or non-participation, in the program.
 
 Often funders have objections to random assignment. Or the individuals or communities who are participating may have objections to random assignment.
+
+Sometimes, instead of relying on random assignment, we may wish to observe the effects of a program more *naturalistically*.
+
+And lastly, the *logistical* demands of random assign may require *smaller samples*, when we wish to observe the outcomes of a program with a *larger*, and possibly more *generalizable*, sample.
 
 # When Participants Choose Their Own Level Of Particpation
 
@@ -348,26 +358,48 @@ ggplot(mydata,
            y = outcome)) +
   geom_point() + 
   geom_smooth(method = "lm") +
-  geom_smooth(aes(color = factor(group)), 
-              method = "lm")
+  labs(title = "A Naive Plot of the Data") +
+  # geom_smooth(aes(color = factor(group)), 
+  #             method = "lm") +
+  theme_minimal()
+
+```
+
+
+```{r}
+#| eval: true
+#| echo: false
+#| message: false
+#| warning: false
+#| fig-cap: "A Three Dimensional Graph"
+
+# rglwidget()
+# options(rgl.useNULL = TRUE) 
+# setupKnitr(autoprint = TRUE) 
+
+scatter3d(outcome ~ program + group, data = mydata)
+
+rglwidget()
 
 ```
 
 ```{r}
+#| eval: false
+#| echo: false
 
-z_matrix <- xtabs(outcome ~ program + group, data = mydata)
+# z_matrix <- xtabs(outcome ~ program + group, data = mydata)
 
-plot_ly(z = ~z_matrix) %>% 
-  add_surface() %>%
-  layout(title = "mytitle")
+# plot_ly(z = ~z_matrix) %>% 
+#   add_surface() %>%
+#   layout(title = "mytitle")
 
-plot_ly(data = mydata, 
-               x = ~group, 
-               y = ~program, 
-               z = ~outcome, 
-               color = ~group,
-               type = "scatter3d", 
-               mode = "markers")
+# plot_ly(data = mydata, 
+#                x = ~group, 
+#                y = ~program, 
+#                z = ~outcome, 
+#                color = ~group,
+#                type = "scatter3d", 
+#                mode = "markers")
 
 ```
 
