added GAM citations

--- a/empathy/empathy.bib
+++ b/empathy/empathy.bib
@@ -5,3 +5,32 @@ journal = {Child Maltreatment},
 year = {2026},
 doi = {10.1177/10775595261422448}
 }
+
+@article{Wood2025,
+   abstract = {Generalized additive models are generalized linear models in which the linear predictor includes a sum of smooth functions of covariates, where the shape of the functions is to be estimated. They have also been generalized beyond the original generalized linear model setting to distributions outside the exponential family and to situations in which multiple parameters of the response distribution may depend on sums of smooth functions of covariates. The widely used computational and inferential framework in which the smooth terms are represented as latent Gaussian processes, splines, or Gaussian random effects is reviewed, paying particular attention to the case in which computational and theoretical tractability is obtained by prior rank reduction of the model terms. An empirical Bayes approach is taken, and its relatively good frequentist performance discussed, along with some more overtly frequentist approaches to model selection. Estimation of the degree of smoothness of component functions via cross validation or marginal likelihood is covered, alongside the computational strategies required in practice, including when data and models are reasonably large. It is briefly shown how the framework extends easily to location-scale modeling, and, with more effort, to techniques such as quantile regression. Also covered are the main classes of smooths of multiple covariates that may be included in models: isotropic splines and tensor product smooth interaction terms.},
+   author = {Simon N Wood},
+   doi = {10.1146/annurev-statistics-112723-034249},
+   issn = {2326-831X},
+   issue = {Volume 12, 2025},
+   journal = {Annual Review of Statistics and Its Application},
+   keywords = {marginal likelihood},
+   pages = {497-526},
+   publisher = {Annual Reviews},
+   title = {Generalized Additive Models},
+   volume = {12},
+   url = {https://www.annualreviews.org/content/journals/10.1146/annurev-statistics-112723-034249},
+   year = {2025}
+}
+
+@book{Wood2017,
+   abstract = {Includes bibliographical references and index.},
+   author = {Simon N Wood},
+   edition = {Second edition.},
+   isbn = {1-4987-2837-5},
+   keywords = {Linear models (Statistics),R (Computer program language),Random walks (Mathematics),Science | Mathematics,Science | Statistics (Mathematical),Social Sciences | Statistics and Numeric Data},
+   note = {"A Chapman & Hall book."},
+   publisher = {CRC Press, Taylor \& Francis Group},
+   title = {Generalized additive models: an introduction with {R}},
+   year = {2017}
+}
+
