updated graphing commands

--- a/multivariate/multivariate.qmd
+++ b/multivariate/multivariate.qmd
@@ -408,23 +408,28 @@ p0 <- ggplot(mydata,
   #             method = "lm") +
   theme_minimal()
 
-p0 + 
+p1 <- p0 + 
   geom_smooth(method = "lm") + 
   labs(title = "A Simple Model of The Data",
        subtitle = "What is the observed relationship between program and outcome?",
        y = "better outcome")
 
+p1 # replay
+
 ```
 
 ```{r}
+#| echo: false
+#| message: false
 
-p0 + 
+p2 <- p0 + 
   geom_smooth(method = "lm",
               aes(group = factor(group))) + 
   labs(title = "A More Complex Model of The Data \nAccounting For Group Membership",
        subtitle = "What is the observed relationship between program and outcome?",
        y = "better outcome")
 
+p2 # replay
 
 ```
 
